replace deprecated Class.newInstance() with getDeclaredConstructor().newInstance() (ClassNewInstance)